--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: jekyll-rtd-theme
-description: Just another documentation theme compatible with GitHub Pages
+title: Traveler Data Guidebook
+description: Website with information on visitor data available for parks
 
 theme: null
 
